# condat-gridconv

./: .gitignore  MANIFEST.in  build-test.sh  pyproject.toml  setup.py
.github/workflows/: tests.yml
condat_gridconv/: gridconv.py
